# phoenix-duskmoon-ui

./: .devenv.flake.nix  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  INTEGRATION_GUIDE.md  PRD.md  README.md  SYNC_AUDIT.md  Validate.md  bunfig.toml  devenv.nix  mix.exs  package.json
.claude/commands/: fix-internal-issues.md  update-project-skill.md  update-upstream-duskmoon-design.md
.claude/skills/duskmoon-dev-core/: SKILL.md
.claude/skills/duskmoon-elements/: SKILL.md
.claude/skills/update-duskmoon-upstream/: SKILL.md
.github/scripts/: verify_native_checksums.exs
.github/workflows/: ci.yml  docker.yml  e2e.yml  fix-internal-issues.yml  native-prebuild.yml  release.yml  test-and-release.yml  test.yml
.specify/memory/: constitution.md
apps/duskmoon_bundler/: .reach.exs  CHANGELOG.md  LICENSE  README.md  mix.exs  package.json
apps/duskmoon_bundler/lib/: duskmoon_bundler.ex
apps/duskmoon_bundler/test/: duskmoon_bundler_test.exs
apps/duskmoon_bundler_runtime/: CHANGELOG.md  README.md  mix.exs
apps/duskmoon_bundler_runtime/lib/: duskmoon_bundler.ex  duskmoon_bundler_runtime.ex
apps/duskmoon_bundler_runtime/test/: duskmoon_bundler_test.exs
apps/duskmoon_hex_solver/: README.md  mix.exs
apps/duskmoon_npm/: README.md  mix.exs
apps/duskmoon_oxc/: README.md  mix.exs
apps/duskmoon_oxc/native/oxc_ex_nif/: Cargo.toml
apps/duskmoon_oxc/native/oxc_ex_nif/src/: bundle.rs  codegen.rs  generated_ast_decoders.rs  generated_term_helpers.rs  imports.rs  lib.rs  options.rs  parse.rs  transform_many.rs
apps/duskmoon_oxide/: Cargo.toml  README.md  mix.exs
apps/duskmoon_oxide/native/oxide_ex_nif/: Cargo.toml
apps/duskmoon_oxide/native/oxide_ex_nif/src/: lib.rs
apps/duskmoon_quickbeam/: README.md  mix.exs
apps/duskmoon_storybook/: .gitignore  mix.exs  package.json
apps/duskmoon_storybook_web/: mix.exs  package.json
apps/duskmoon_vize/: Cargo.toml  README.md  mix.exs
apps/duskmoon_vize/native/vize_ex_nif/: Cargo.toml
apps/duskmoon_vize/native/vize_ex_nif/src/: html_inject.rs  ir_encoding.rs  lib.rs  macros.rs  term_encoding.rs  vapor_split.rs
apps/phoenix_duskmoon/: .releaserc.yaml  CHANGELOG.md  mix.exs  package.json
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/investigation/: d3-selection-error.md
docs/phoenix-duskmoon-ui/: SKILL.md
skills/phoenix-duskmoon-ui/: SKILL.md
(+949 files in other folders)
