[package]
name = "oxc_ex_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxc_ex_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.38", default-features = false, features = ["derive", "nif_version_2_15", "serde"] }
rustler_match_spec = { version = "0.1", default-features = false }
oxc_allocator = "0.130"
oxc_ast = { version = "0.130", features = ["serialize"] }
oxc_ast_visit = "0.130"
oxc_codegen = { version = "0.130", features = ["sourcemap"] }
oxc_diagnostics = "0.130"
oxc_minifier = "0.130"
oxc_parser = "0.130"
oxc_semantic = "0.130"
oxc_sourcemap = "7.0"
oxc_span = "0.130"
oxc_str = "0.130"
oxc_syntax = "0.130"
oxc_transformer = "0.130"
oxc = { version = "0.135", features = ["minifier"] }
rolldown = "1.1"
rolldown_common = "1.1"
rustc-hash = "2.1.1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "time"] }
